# AURIS

./: .ghcid  .gitignore  .gitmodules  .hlint.yaml  Auris1TestConfig.json  CHANGELOG.md  CONTRIBUTING.md  DefaultConfig.json  DefaultConfigSQLite.json  EdenRouterCnc1Config.json  EdenRouterEden1Config.json  EdenRouterEden2Config.json  LICENSE  Makefile  README.md  README.org  SUCA-IP.json  brittany_config.yaml  cabal.project  cabal.project.freeze  config.json  create-resources.sh  default.nix  error_msg.txt  esa-db.cabal  esa-mib.cabal  esa-space-protocols.cabal  mcs-interface.cabal  package.yaml  pusc_config.json  pusc_config_2.json  pusc_config_ccs_only.json  pusc_config_ccs_only_1.json  pusc_config_ccs_only_2.json  pusc_config_g2g.json  result.txt  s2k_config.json  s2k_config_fcltu.json  s2k_config_opt.json  s2k_config_profile.json  (+15 more)
Chart-gi-cairo/: Chart-gi-cairo.cabal
Chart-gi-cairo/Graphics/Rendering/Chart/Backend/GI/: Cairo.hs
app/: Main.hs
auris-control-displays/: CHANGELOG.md  LICENSE  auris-control-displays.cabal
auris-tc-displays/: CHANGELOG.md  auris-tc-displays.cabal
auris-tm-displays/: Setup.hs  auris-tm-displays.cabal  stack.yaml
auris-tm-displays/src/GUI/: ANDWidget.hs  Chart.hs  ConnectionTab.hs  FrameRetrieveDialog.hs  Graph.hs  GraphWidget.hs  NameStore.hs  PUSPacketTable.hs  ParamDisplay.hs  RetrieveDialog.hs  TMFrameTab.hs  TMFrameTable.hs  TMPParamTable.hs  TMPacketTab.hs  TMPacketTable.hs  TMParamDetails.hs  TMParamTab.hs
auris-tm-displays/src/Model/: PUSPacketModel.hs  TMFrameModel.hs  TMPParamModel.hs  TMPacketModel.hs
auris-tmph/: README.md  auris-tmph.cabal  stack.yaml
auris-tmph/src/: TMPH.fl  TMPHMain.hs
auris-tmph/src/GUI/: Colors.hs  Graph.hs  MainWindow.hs  MainWindowCallbacks.hs  PUSPacketTable.hs  ParamDisplay.hs  TMFrameTab.hs  TMFrameTable.hs  TMPParamTable.hs  TMPacketTab.hs  TMPacketTable.hs  TMParamTab.hs
auris-tmph/src/Model/: PUSPacketModel.hs  TMFrameModel.hs  TMPParamModel.hs  TMPacketModel.hs
aurisi/: Setup.hs  aurisi.cabal  create-resources.sh  resources.xml  stack.yaml
aurisi/csrc/: resources.c
aurisi/data/: #MainWindow.glade#  MainWindow.glade  style.css
aurisi/src/: AURISi.fl  AURISiMain.hs  AurisConfig.hs  AurisInterface.hs  AurisMissionSpecific.hs  AurisProcessing.hs  MainWindow.glade  MainWindow.glade~  Version.hs
aurisi/src/GUI/: About.hs  Logo.hs  LogoXPM.hs  MainWindow.hs  MainWindowActions.hs  MainWindowCallbacks.hs  MessageDetails.hs  MessageDisplay.hs  MessageTypes.hs  ParamDetailWindow.hs  TMFrameTab.hs  TMPacketTab.hs  Theme.hs
aurisi/src/test/: AurisConfig.hs  WriteAurisConfig.hs
configs/: csim_com_ip.json~  csim_suca_ip.json  csim_suca_ip.json~
esa-base/: CHANGELOG.md  esa-base.cabal  stack.yaml
esa-db/: LICENSE  README.md  esa-db.cabal  stack.nix.yaml
esa-db-mongodb/: CHANGELOG.md  LICENSE  esa-db-mongodb.cabal
esa-mib/: CHANGELOG.md  README.md  esa-mib.cabal  out.txt  stack.yaml
esa-space-protocols/: .gitignore  .hlint.yaml  CHANGELOG.md  README.md  esa-space-protocols.cabal  stack.yaml
esa-space-protocols/docker/: Dockerfile
esa-space-protocols/etc/: setProxy.sh
esa-space-protocols/src/Application/: Chains.hs  DataModel.hs
esa-space-protocols/src/Conduit/: PayloadParser.hs  SocketConnector.hs
esa-space-protocols/src/Control/PUS/: Classes.hs
esa-space-protocols/src/Data/PUS/: APID.hs  CLCW.hs  CLTU.hs  CLTUEncoder.hs  CLTUTable.hs  COP1Types.hs  Config.hs  Counter.hs  EncTime.hs  EventHandler.hs  Events.hs  ExtractedDU.hs  ExtractedPUSPacket.hs  FARM1.hs  FOP1.hs  GlobalState.hs  NcduToTMFrame.hs  PUSDfh.hs  PUSPacket.hs  PUSPacketEncoder.hs  PUSState.hs  Parameter.hs  ProtocolSwitcher.hs  Randomizer.hs  SSCCounter.hs  Segment.hs  SegmentEncoder.hs  SegmentationFlags.hs  TCCnc.hs  TCDirective.hs  TCFrameTypes.hs  TCGeneration.hs  TCPacket.hs  TCPacketEncoder.hs  TCRequest.hs  TCRequestEncoder.hs  TCTransferFrame.hs  TCTransferFrameEncoder.hs  TMFrame.hs  TMFrameDfh.hs  (+9 more)
esa-space-protocols/src/Data/PUS/MissionSpecific/: CO2M.hs  Default.hs  Definitions.hs  MissionSpecific.hs  PUSC.hs
esa-space-protocols/src/Persistence/: DbConfig.hs  DbInterface.hs  DbResultProcessor.hs  Logging.hs
esa-space-protocols/src/Persistence/Conversion/: TMFrame.hs  Types.hs
esa-space-protocols/src/Protocol/: CnC.hs  EDEN.hs  EDENEncoder.hs  EDENProcessor.hs  NCTRS.hs  NCTRSProcessor.hs  NDIULite.hs  NDIULiteProcessor.hs  ProtocolInterfaces.hs  ProtocolSwitcher.hs  SLE.hs  Switcher.hs
esa-space-protocols/src/Protocol/Internal/: FCLTU.hs  RAF.hs  SLE.hs  SLEDummy.hs  SLETypes.hs
esa-space-protocols/src/Verification/: Commands.hs  Processor.hs  Verification.hs
esa-space-protocols/src/bench/: CmdEncodePerf.hs
esa-space-protocols/src/csrc/: CLTUcsrc.c
esa-space-protocols/src/test/: CLTUTest.hs  CommandingAD.hs  CommandingTest.hs  EventLoggingDBTest.hs  RetrievalTest.hs  TCEncodeTests.hs  TMExtractionTest.hs  TMModelTest.hs  TMSimulatorTest.hs  TestBits.hs  VerificationTest.hs  WriteConfig.hs
esa-tm-model/: CHANGELOG.md  esa-tm-model.cabal  stack.yaml
figures/: data_pipelines.dot  dependencies.dot
gui-base/: CHANGELOG.md  gui-base.cabal  stack.yaml
hashtables-mo/: .gitignore  hashtables-mo.cabal
lib-aurisi/: README.md  create-resources.sh  lib-aurisi.cabal  resources.xml  stack.yaml
lib-aurisi/data/: AURISi.desktop  ChartWidget.glade  MainWindow.glade  SLEStatus.glade  SLEStatus.glade~  style.css
lib-aurisi/src/: AURISiMain.hs  AurisConfig.hs  AurisInterface.hs  AurisLogo.xpm  AurisMissionSpecific.hs  AurisProcessing.hs  AurisStart.hs  Version.hs
lib-aurisi/src/GUI/: About.hs  Logo.hs  MainWindow.hs  MainWindowActions.hs  MainWindowCallbacks.hs  MessageDisplay.hs
mcs-interface/: CHANGELOG.md  README.md  (+2 more)
timer-wheel/: .ghcid  .gitignore  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  timer-wheel.cabal
timer-wheel/.github/workflows/: ci.yaml
timer-wheel/bench/: Main.hs
timer-wheel/src/Data/: TimerWheel.hs
timer-wheel/src/Data/TimerWheel/Internal/: Config.hs  Entries.hs  Micros.hs  Supply.hs  Timestamp.hs  Wheel.hs
timer-wheel/test/: Main.hs
(+398 files in other folders)
