cabal-version: >=1.10
name: esa-space-protocols
version: 0.1.0.0
license: BSD3
license-file: LICENSE
maintainer: michael.oswald@onikudaki.net
author: Michael Oswald
synopsis: A Haskell library for handling space protocols from ESA (European Space Agency) like CCSDS, PUS etc
category: Data
build-type: Simple
extra-source-files:
    CHANGELOG.md
    README.md

flag llvm
    description:
        build library with llvm
    default: False

flag tests
    description:
        Build test suite
    default: False

flag bench
    description:
        Build benchmarks
    default: False

library
    exposed-modules:
        General.Chunks
        General.Hexdump
        General.Padding
        Control.PUS.Monads
        Data.PUS.Config
        Data.PUS.Types
        Data.PUS.APID
        Data.PUS.PUSState
        Data.PUS.GlobalState
        Data.PUS.Events
        Data.PUS.CRC
        Data.PUS.CLTU
        Data.PUS.CLTUTable
        Data.PUS.CLCW
        Data.PUS.Randomizer
        Data.PUS.TCTransferFrame
        Data.PUS.TCRequest
        Data.PUS.TCRequestEncoder
        Data.PUS.TCPacket
        Data.PUS.TCPacketEncoder
        Data.PUS.PUSPacket
        Data.PUS.PUSPacketEncoder
        Data.PUS.FOP1
        Data.PUS.FARM1
        Data.PUS.Segment
        Data.PUS.SegmentEncoder
        Data.PUS.SegmentationFlags
        Data.PUS.TCDirective
        Data.PUS.Time
        Protocol.Classes
        Protocol.NCTRS



    hs-source-dirs: src
    default-language: Haskell2010
    other-extensions: OverloadedStrings BangPatterns
    build-depends:
        base
        , bytestring
        , bytestring-strict-builder
        , aeson
        , text
        , hw-prim
        , text-show
        , vector
        , formatting
        , attoparsec
        , attoparsec-binary
        , attoparsec-data
        , conduit
        , conduit-extra
        , closed
        , rio
        , mtl
        , unliftio
        , parallel
        , lens
        , binary
        , stm
        , thyme

    if flag(llvm)
        ghc-options: -O -Wall -Wcompat -Wincomplete-record-updates
                     -Wincomplete-uni-patterns -Wredundant-constraints
                     -funbox-strict-fields -fllvm
    else
        ghc-options: -O -Wall -Wcompat -Wincomplete-record-updates
                     -Wincomplete-uni-patterns -Wredundant-constraints
                     -funbox-strict-fields

executable WriteConfig
    main-is: WriteConfig.hs
    default-language: Haskell2010
    hs-source-dirs: src/test
    ghc-options: -Wall -O
    build-depends:
        esa-space-protocols -any,
        base >=4.12.0.0 && <4.13,
        bytestring >=0.10.8.2 && <0.11

test-suite CLTUTest
    type: exitcode-stdio-1.0
    main-is: CLTUTest.hs
    default-language: Haskell2010
    c-sources:
        src/csrc/CLTUcsrc.c
    hs-source-dirs: src/test
    include-dirs: src/csrc
    ghc-options: -Wall -O

    build-depends:
        esa-space-protocols -any,
        base -any,
        bytestring -any,
        hedgehog -any,
        hedgehog-quickcheck -any,
        inline-c -any,
        attoparsec -any,
        text -any,
        mtl -any,
        vector -any



benchmark CLTUPerf
    type: exitcode-stdio-1.0
    main-is: CLTUPerf.hs
    default-language: Haskell2010
    c-sources:
        src/csrc/CLTUcsrc.c
    hs-source-dirs: src/bench
    include-dirs: src/csrc
    ghc-options: -Wall -O2 -funbox-strict-fields
    -- For profiling comment this line in:
    --ghc-options: -Wall -O2 -threaded -fprof-auto -fexternal-interpreter
    --            -funbox-strict-fields -prof "-with-rtsopts=-N -p -s -h -i0.1"

    build-depends:
        esa-space-protocols -any,
        base -any,
        bytestring -any,
        inline-c -any,
        criterion -any,
        inline-c -any
