name : auris-tm-displays
version : 0.0.0.1
synopsis : A telemetry packet history for AURIS
description:
    A commanding application for mission control
license : BSD3
license-file : LICENSE
author : Michael Oswald
build-type: Simple
maintainer: michael.oswald@onikudaki.net
homepage:
category: UI,Graphics
cabal-version: 2.0


source-repository head
  type: git
  location: http://github.com/oswald2/AURIS

Flag FastCompile
   Description: Turn off optimizations for faster compilation
   Manual: True
   Default: False

flag llvm
    description:
        build library with llvm
    default: False

flag optimize
    description:
      build library with optimization
    default: False



library

  exposed-modules:
    GUI.PUSPacketTable
    GUI.TMPacketTable
    GUI.TMPParamTable
    GUI.TMFrameTable
    GUI.TMPacketTab
    GUI.TMFrameTab
    GUI.TMParamTab
    GUI.TMParamDetails
    GUI.Chart
    GUI.GraphWidget
    GUI.ANDWidget
    GUI.ParamDisplay
    GUI.FrameRetrieveDialog
    GUI.NameStore


  Hs-Source-Dirs: src/
  Build-Depends:
    base == 4.*,
    rio,
    lens,
    esa-base,
    mcs-interface,
    gui-base,
    text-short,
    Chart,
    Chart-gi-cairo,
    -- Chart-diagrams,
    colour,
    multiset,
    time,
    gi-gtk,
    gi-gtk-hs,
    gi-cairo,
    gi-cairo-connector,
    gi-gdk,
    gi-pango,
    haskell-gi-base,
    text-builder,
    hashtables-mo,
    vector


  default-extensions:
        BangPatterns
        BinaryLiterals
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        NoImplicitPrelude
        OverloadedStrings
        OverloadedLabels
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilies
        TypeSynonymInstances
        TypeApplications
        ViewPatterns
        NumericUnderscores


  default-language: Haskell2010
  if flag(llvm)
        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                     -funbox-strict-fields -fllvm -optlo-O3
  else
    if flag(optimize)
        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                     -funbox-strict-fields
    else
        ghc-options: -O0 -g2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                     -funbox-strict-fields


  