name : auris-tmph
version : 0.0.0.1
synopsis : A telemetry packet history for AURIS
description:
    A commanding application for mission control
license : BSD3
license-file : LICENSE
author : Michael Oswald
build-type: Custom
maintainer: michael.oswald@onikudaki.net
homepage:
category: UI,Graphics
cabal-version: >=2.0
extra-source-files: src/TMPH.fl


source-repository head
  type: git
  location: http://github.com/oswald2/AURIS

custom-setup
  setup-depends:
      Cabal >=2.2.0.0 && <3
    , base >=4.4
    , filepath

Flag FastCompile
   Description: Turn off optimizations for faster compilation
   Manual: True
   Default: False

flag llvm
    description:
        build library with llvm
    default: False


Executable TMPHDisplay
  Main-Is: TMPHMain.hs
  Other-modules:
    GUI.MainWindow
    GUI.MainWindowCallbacks
    GUI.PUSPacketTable
    GUI.Colors

  Hs-Source-Dirs: src/
  Build-Depends:
    base == 4.*,
    fltkhs >= 0.8.0.0,
    text >= 1.2.2.0,
    rio,
    lens


  default-language: Haskell2010
  if flag(llvm)
    ghc-Options: -O -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields -threaded -fllvm
  else
    ghc-Options: -O -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                      -funbox-strict-fields -threaded 

  if impl(ghc >= 7.10) && flag(FastCompile)
     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
  Other-Modules: TMPH
  if os(windows)
    ghc-Options: -optl-mwindows
    ghc-Options: -pgml g++ "-optl-Wl,--allow-multiple-definition" "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  if os(darwin)
   ghc-Options: "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--allow-multiple-definition" "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
