name : aurisi
version : 0.0.0.1
synopsis : Integrated GUI for the AURIS mission control system
description:
    The graphical user interface for the (integrated) version of AURIS
license : BSD3
license-file : LICENSE
author : Michael Oswald
build-type: Simple
maintainer: michael.oswald@onikudaki.net
homepage:
category: UI,Graphics
cabal-version: >=2.0


source-repository head
  type: git
  location: http://github.com/oswald2/AURIS

Flag FastCompile
   Description: Turn off optimizations for faster compilation
   Manual: True
   Default: False

flag llvm
    description:
        build library with llvm
    default: False

flag optimize
    description:
      build library with optimization
    default: False


Executable AURISi
  Main-Is: AURISiMain.hs
  Other-modules:
    GUI.MainWindow
    GUI.MainWindowCallbacks
    GUI.MainWindowActions
    GUI.MessageDisplay
    GUI.Logo
    GUI.LogoXPM
    GUI.About
    GUI.Theme
    AurisInterface
    AurisProcessing
    AurisConfig
    AurisMissionSpecific
    Version

  Hs-Source-Dirs: src/
  c-sources: src/AurisLogo.c 

  Build-Depends:
    base == 4.*,
    text >= 1.2.2.0,
    rio,
    lens,
    containers,
    esa-base,
    esa-space-protocols,
    esa-mib,
    gui-base,
    fltkhs,
    auris-tm-displays,
    mcs-interface,
    optparse-generic,
    gitrev,
    aeson,
    aeson-pretty,
    conduit,
    conduit-extra,
    directory,
    filepath,
    text-short,
    file-embed,
    hashtables-mo,
    stm-conduit,
    gi-gtk,
    gi-gtk-hs,
    gi-gdk,
    gi-gdkpixbuf,
    gi-gobject,
    tar,
    zlib

  default-extensions:
        AutoDeriveTypeable
        BangPatterns
        BinaryLiterals
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MonadFailDesugaring
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedStrings
        OverloadedLabels
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilies
        TypeSynonymInstances
        ViewPatterns
        NumericUnderscores


  default-language: Haskell2010
  if flag(llvm)
        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                     -funbox-strict-fields -fllvm -optlo-O3 -threaded -rtsopts
  else
    if flag(optimize)
        ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                     -funbox-strict-fields  -threaded -rtsopts
    else
        ghc-options: -O0 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                     -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
                     -funbox-strict-fields  -threaded -rtsopts


  if impl(ghc >= 7.10) && flag(FastCompile)
     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
  if os(windows)
    ghc-Options: -optl-mwindows
    ghc-Options: -pgml g++ "-optl-Wl,--allow-multiple-definition" "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  if os(darwin)
   ghc-Options: "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--allow-multiple-definition" "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"




